--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
                                 to-do list-but just because you've written your to-dos down doesn't mean your to-do list is actually useful. Effectively tracking when your work is due can help you prioritize and get great work done.</p>
                         </div>
                     </div>
+                    <div class="box">
+                        <div class="year_company">
+                            <h4>Cricket Score Chrome Extension </h4>
+                        </div>
+                        <div class="text">
+                            <p>This chrome extension shows the IPL matches which are happening on a particular day.I have integrated an API to get the data.</p>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="about skills">
