--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <h4>Programming Languages:</h4>
                         </div>
                         <div class="text1">
-                            <p>Python,Java,C++,C</p>
+                            <p>Python,Java,C++,C#</p>
                         </div>
                     </div>
                     
@@ -164,6 +164,14 @@
                         </div>
                         <div class="text1">
                             <p>Node.js,Express.js,React.js</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="year_company1">
+                            <h4>Developer Tools:</h4>
+                        </div>
+                        <div class="text1">
+                            <p>Github,Visual Studio Code</p>
                         </div>
                     </div>
                 </div>
