--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             <h4>Java FullStack Internship</h4>
                         </div>
                         <div class="text">
-                            <p>As a part of this internship I learnt some basics of java and React.js and at the end prepared a website.<br>The website is Inventory Management System Website.</p>
+                            <p>As a part of this internship I learnt some basics of java and React.js and at the end prepared a website.<br>The website is E-Commerce website for gadget store</p>
                         </div>
                     </div>
                 </div>
